1 - 8 stream tasks completed.